<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="MAIN" Id="{1ebefdd1-3e03-4aac-b0d7-9cb2e38b8084}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	
current_state : INT;
next_state : INT;
start_process : BOOL;
initialized : BOOL;

hasCycled : BOOL := FALSE;
waitTimer : TON; 
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
// Generování časového impulsu
Global.secImp := NOT(Global.secImp);

CASE Current_state OF
    0: // Init
        IF start_process THEN
            next_state := 1; // Přechod na inicializaci hodnot
        ELSE
            next_state := 0; // Zůstáváme v Init
        END_IF;

    1: // InitValues
        // Nastavení výchozích hodnot pro všechny fáze (jen jednou)
        IF NOT initialized THEN
            Global.Tank1.Filling.ParamFillLevel := 0.4;
            Global.Tank1.Heating.ParamReqTemp := 50.0;
            Global.timeReqOnTemp := 5;
            Global.Tank1.Draining.ParamDrainLevel := 0.0;
            
            Global.maxWaterTemp := 95;
            Global.timeReqOnTemp := 10;

            initialized := TRUE; // Označení, že inicializace proběhla
        END_IF;

        // Resetování stavů Done
        Global.Tank1.Filling.Cmd.ResetDone := TRUE;
        Global.Tank1.Heating.Cmd.ResetDone := TRUE;
        Global.Tank1.Mixing.Cmd.ResetDone := TRUE;
        Global.Tank1.Draining.Cmd.ResetDone := TRUE;

        start_process := FALSE;
        next_state := 2; // Přechod na Filling

    2: // Filling
        // Přidání čekání, pokud cyklus již proběhl
        IF hasCycled THEN
            waitTimer(IN := TRUE, PT := Global.Tank1.ValveDraining.Time2Open); // Časovač čekání 5 sekund
            IF waitTimer.Q THEN
                waitTimer(IN := FALSE); // Reset časovače
                hasCycled := FALSE; // Reset indikace cyklu
                Global.Tank1.Filling.Cmd.StartAut := TRUE; // Spuštění Filling fáze
            END_IF;
        ELSE
            Global.Tank1.Filling.Cmd.StartAut := TRUE; // Spuštění Filling fáze
        END_IF;

        IF Global.Tank1.Filling.State.Done THEN
            Global.Tank1.Filling.Cmd.StartAut := FALSE; // Zastavení Filling
            next_state := 3; // Přechod na Heating
        END_IF;

    3: // Heating
        Global.Tank1.Heating.Cmd.StartAut := TRUE; // Spuštění Heating fáze
        IF Global.Tank1.Heating.State.Running AND Global.Tank1.Heating.WaterTemp > 35 THEN
            Global.Tank1.Mixing.Cmd.StartAut := TRUE; // Zahájit Mixing při dosažení 40 °C
        END_IF;

        IF Global.Tank1.Heating.State.Done THEN
            Global.Tank1.Heating.Cmd.StartAut := FALSE; // Zastavení Heating
            next_state := 4; // Přechod na Draining
        END_IF;

    4: // Draining
        Global.Tank1.Draining.Cmd.StartAut := TRUE; // Spuštění Draining fáze
        Global.Tank1.Mixing.Cmd.StartAut := TRUE; // Mixér pokračuje během vypouštění
        IF Global.Tank1.Draining.State.Done THEN
            Global.Tank1.Draining.Cmd.StartAut := FALSE; // Zastavení Draining
            Global.Tank1.Mixing.Cmd.StartAut := FALSE; // Zastavení Mixing po vypuštění
            Global.Tank1.Mixing.Cmd.StopAut := TRUE;
            next_state := 5; // Přechod na Reset
        END_IF;

    5: // Reset
        // Resetování stavů Done a příprava na další cyklus
        Global.Tank1.Filling.Cmd.ResetDone := TRUE;
        Global.Tank1.Heating.Cmd.ResetDone := TRUE;
        Global.Tank1.Mixing.Cmd.ResetDone := TRUE;
        Global.Tank1.Draining.Cmd.ResetDone := TRUE;

        hasCycled := TRUE; // Označení, že cyklus proběhl
        next_state := 2; // Návrat na Filling
END_CASE;

current_state := next_state;
]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="1356" Count="85" />
      <LineId Id="368" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>